# fine-tune-slm

./: .gitignore  README.md  model_card_readme.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build-and-push-ecr.yml
config/: aws_config.yml  training_config.yml
docker/: .dockerignore  Dockerfile
docs/: ARCHITECTURE.md  AWS_SETUP.md  COMPLETE_SETUP_GUIDE.md  EC2_VERIFICATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  MODEL_TESTING.md  MONITORING_TRAINING.md  RUN_TRAINING_GUIDE.md  SECRETS_MANAGER_QUICKSTART.md  SSM_PARAMETER_GUIDE.md  TESTING_ARCHITECTURE.md  TESTING_GUIDE.md
scripts/finetune/: push_to_hf.py  run_test_model_ec2.py  run_training.py  test_model_ec2.py
scripts/setup/: deploy_via_ssm.py  init_ssm_parameters.py  start_ec2.py  stop_ec2.py
scripts/utils/: cleanup_checkpoints.py  sync_tensorboard.sh  view_training_metrics.py
scripts/verify/: verify_ec2_setup.sh
src/: __init__.py  test_model.py  train.py
src/utils/: __init__.py  aws_helpers.py  config.py  logger.py
synthetic-instruction-tuning-dataset/: train.jsonl  validation.jsonl
