[tool.poetry]
name = "fine-tune-slm"
version = "0.1.0"
description = "Fine-tune Llama 3.1 8B for medical cancer-specific information extraction"
authors = ["Long Hoang <longhhoang1202@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

# Core ML dependencies (for training)
torch = "^2.1.0"
transformers = "^4.35.0"
peft = "^0.7.0"
datasets = "^2.15.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.0"

# AWS dependencies
boto3 = "^1.29.0"
botocore = "^1.32.0"

# Utilities
loguru = "^0.7.0"
pyyaml = "^6.0"
tqdm = "^4.66.0"

# Optional: Monitoring
tensorboard = "^2.14.0"
wandb = { version = "^0.15.0", optional = true }

[tool.poetry.extras]
wandb = ["wandb"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]
